--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 	<h1>Gundam Quotes</h1>
+	<form action="/quotes" method="POST">
+		<input type="text" placeholder="Name" name="name">
+		<input type="text" placeholder="Quote" name="quote">
+		<button type="submit">Submit</button>
+	</form>
 </body>
 </html>
